# treebeard

./: .gitignore  .odmrc  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/design/: Cargo.toml
crates/design/dev/treebeard/: 0001-compilation-pipeline-vm-epiphany.md  0002-treebeard-research-prompt.md  0003-treebeard-architecture-v1.md  0004-treebeard-architecture-v2.md  0005-rust-vm-projects-analysis-prompt.md  0006-rust-vm-projects-analysis-report.md  0007-erlang-vm-analysis-prompt.md  0008-erlang-vm-00-summary.md  0009-erlang-vm-01-lfe-architecture-analysis.md  0010-erlang-vm-02-hot-code-loading-for-tree-walkers.md  0011-erlang-vm-03-treebeard-design-synthesis.md  0012-erlang-vm-04-thin-layer-principles.md  0013-treebeard-synthesis-prompt.md  0015-treebeard-build-vs-reuse-prompt.md  0016-treebeard-build-vs-reuse-analysis.md  0017-claude-code-reacts-to-treebeard.md  0018-interpreter-vs-vm-distinctions.md  0020-phase1-stage1.2-environment.md  0021-phase1-stage1.3-basic-expressions.md  0022-phase1-stage1.4-control-flow.md  0023-phase1-stage1.5-functions.md  0024-phase1-stage1.6-statements-blocks.md  0025-phase2-stage2.1-frontend-trait.md  0026-phase2-stage2.2-rust-frontend.md  0027-phase2-stage2.3-oxur-frontend.md
crates/design/docs/: index.md
crates/design/docs/01-draft/: 0001-treebeard-implementation-guide-v3.md  0002-treebeard-fangorn-a-vision-document.md  0003-what-is-treebeard.md
crates/design/docs/05-active/: 0004-treebeard-project-plan.md  0005-treebeard-implementation-stages.md
crates/design/src/: lib.rs
crates/treebeard/: Cargo.toml
crates/treebeard/src/: context.rs  environment.rs  error.rs  evaluator.rs  expansion.rs  frontend.rs  lib.rs  macro_env.rs  ownership.rs  template.rs  value.rs
crates/treebeard/src/environment/: frame.rs  prelude.rs
crates/treebeard/tests/: control_flow_tests.rs  environment_tests.rs  error_coverage_tests.rs  eval_comprehensive_tests.rs  eval_coverage_tests.rs  eval_tests.rs  pattern_matching_tests.rs  value_coverage_tests.rs  value_final_coverage.rs  value_tests.rs
(+38 files in other folders)
