[workspace]
resolver = "2"
members = [
    "crates/treebeard",
    "crates/design",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/oxur/treebeard"
homepage = "https://github.com/oxur/treebeard"

[workspace.dependencies]
# Core dependencies
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Data structures
dashmap = "5.5"

# Async runtime (for REPL)
tokio = { version = "1", features = ["full"] }

# CLI and terminal
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
